FIX: refactor social alignment style. (7)

--- a/source/css/_common/components/post/post-meta.styl
+++ b/source/css/_common/components/post/post-meta.styl
@@ -48,7 +48,7 @@
   text-align: center;
   border-top: 1px solid #eee;
   padding-top: 9px;
-  margin-top: 40px;
+  margin-top: 45px;
   display: flex;
   justify-content: center;
 }
